# rust-pipe

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic_dispatch.rs  go_worker.go  python_worker.py  typescript_worker.ts
scripts/: pre-publish.sh
sdks/csharp/: RustPipe.Worker.csproj
sdks/csharp/src/: PipeWorker.cs
sdks/elixir/: mix.exs
sdks/elixir/lib/: rust_pipe.ex
sdks/go/: go.mod  types.go  worker.go
sdks/java/: pom.xml
sdks/java/src/main/java/io/rustpipe/: PipeWorker.java
sdks/php/: composer.json
sdks/php/src/: PipeWorker.php
sdks/python/: pyproject.toml
sdks/python/rust_pipe/: __init__.py  types.py  worker.py
sdks/ruby/: rust_pipe.gemspec
sdks/ruby/lib/: rust_pipe.rb
sdks/swift/: Package.swift
sdks/swift/Sources/RustPipe/: PipeWorker.swift
sdks/typescript/: package.json
sdks/typescript/src/: index.ts  types.ts  worker.ts
src/: lib.rs
src/dispatch/: mod.rs
src/schema/: mod.rs
src/transport/: docker.rs  mod.rs  ssh.rs  stdio.rs  wasm.rs  websocket.rs
src/validation/: mod.rs
src/worker/: mod.rs
tests/: dispatch.rs  schema.rs  transport.rs  worker.rs
tests/go_worker/: main.go
tests/mock_bins/: die_after_one  docker  docker_fail_run  nonjson_then_die  ssh  ssh_fail  stdio_exit_immediately  stdio_nonjson  wasmtime
tests/mock_bins/docker_fail_dir_8155/: docker
tests/py_worker/: worker.py
tests/stdio_worker/: worker.sh
tests/ts_worker/: package.json  worker.ts
