[project]
name = "rust-pipe"
version = "0.1.0"
description = "Python worker SDK for rust-pipe — receive typed tasks from a Rust dispatcher"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
